--- a/index.html
+++ b/index.html
@@ -933,6 +933,13 @@
 </tr>
 
 <tr>
+<td>101 Uses For A Dead Cube</td>
+<td>1981</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>150 New Cartoons</td>
 <td>1962</td>
 <td>Charlton</td>
@@ -3209,6 +3216,13 @@
 </tr>
 
 <tr>
+<td>Afro Samurai</td>
+<td>2008</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Afrodisiac</td>
 <td>2009</td>
 <td>AdHouse</td>
@@ -5296,6 +5310,13 @@
 <td>1932</td>
 <td>NEA</td>
 <td><a href="AlleyOop/AlleyOop.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Alley Oop</td>
+<td>1983</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11476,6 +11497,13 @@
 </tr>
 
 <tr>
+<td>Battle Of Blood And Ink</td>
+<td>2012</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Battle Of The Planets</td>
 <td>1972</td>
 <td>Tatsunoko</td>
@@ -12078,6 +12106,27 @@
 </tr>
 
 <tr>
+<td>Beetle Bailey: Potato Fancakes!</td>
+<td>1983</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Beetle Bailey: The Rough Riders</td>
+<td>1982</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Beetle Bailey: You Crack Me Up</td>
+<td>1984</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Beetlejuice</td>
 <td>1991</td>
 <td>Harvey</td>
@@ -12214,6 +12263,104 @@
 <td>2018</td>
 <td>Simon And Schuster</td>
 <td><a href="SimonAndSchuster/SimonAndSchuster.html">Details</td>
+</tr>
+
+<tr>
+<td>Belvedere And Friend</td>
+<td>1982</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Belvedere: All Dogs Must Be On Leash</td>
+<td>1982</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Belvedere: Beware... Obedience School Dropout</td>
+<td>1991</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Belvedere: Bone Pie</td>
+<td>1992</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Belvedere: Don't Push Your Luck!</td>
+<td>1984</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Belvedere: Flapjacks</td>
+<td>1990</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Belvedere: Bone Pie</td>
+<td>1992</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Belvedere: Don't Push Your Luck!</td>
+<td>1984</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Belvedere: Flapjacks</td>
+<td>1990</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Belvedere: Hot Dog!</td>
+<td>1987</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Belvedere: How Was That For A Karate Chop?</td>
+<td>1991</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Belvedere: I Said I'm Not Ready To Get Up Yet</td>
+<td>1991</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Belvedere: Now Just One Minute!</td>
+<td>1983</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Belvedere: The Odds Are</td>
+<td>1982</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14884,6 +15031,13 @@
 </tr>
 
 <tr>
+<td>Blondie</td>
+<td>1982</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blondie And Dagwood Family</td>
 <td>1963</td>
 <td>Harvey</td>
@@ -15867,6 +16021,13 @@
 <td>1945</td>
 <td>Fox Comics</td>
 <td><a href="FoxPublications/FoxPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Book Of Ballads</td>
+<td>2004</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21137,6 +21298,13 @@
 <td>1993</td>
 <td>Fleetway Quality</td>
 <td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Chronin</td>
+<td>2019</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27466,6 +27634,13 @@
 <td>2011</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dear Creature</td>
+<td>2011</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35753,6 +35928,13 @@
 </tr>
 
 <tr>
+<td>Felix The Cat</td>
+<td>1981</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Felon</td>
 <td>2001</td>
 <td>Image</td>
@@ -37306,10 +37488,17 @@
 </tr>
 
 <tr>
-<td>For a Night Of Love</td>
+<td>For A Night Of Love</td>
 <td>1951</td>
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>For Better Of For Worse: But, I Read The Destructions!</td>
+<td>2011</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -38598,6 +38787,13 @@
 <td>1991</td>
 <td>MU Press</td>
 <td><a href="MUPress/MUPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Furnace: A Graphic Novel</td>
+<td>2018</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -40498,6 +40694,13 @@
 </tr>
 
 <tr>
+<td>Girl Genius Omnibus Volume One: Agatha Awakens</td>
+<td>2012</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Girl Who Kicked The Hornets Nest</td>
 <td>2015</td>
 <td>Vertigo</td>
@@ -41590,6 +41793,13 @@
 </tr>
 
 <tr>
+<td>Grease Monkey</td>
+<td>2006</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Greaser Comics</td>
 <td>1972</td>
 <td>Rip Off</td>
@@ -41982,6 +42192,55 @@
 </tr>
 
 <tr>
+<td>Grim Ghost</td>
+<td>1975</td>
+<td>Atlas Seaboard</td>
+<td><a href="GrimGhost/GrimGhost.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Grim Wit</td>
+<td>1972</td>
+<td>Rip Off</td>
+<td><a href="RipOffPress/RipOffPress.html">Details</a>
+</tr>
+
+<tr>
+<td>Grim Wit</td>
+<td>1973</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Grimjack</td>
+<td>1984</td>
+<td>First Comics</td>
+<td><a href="GrimJack/GrimJack.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Grimjack Casefiles</td>
+<td>1990</td>
+<td>First Comics</td>
+<td><a href="FirstComics/FirstComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Grimjack: Killer Instinct</td>
+<td>2005</td>
+<td>IDW</td>
+<td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Grimjack: The Manx Cat</td>
+<td>2009</td>
+<td>IDW</td>
+<td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Grimm Fairy Tales</td>
 <td>2005</td>
 <td>Zenescope</td>
@@ -42003,13 +42262,6 @@
 </tr>
 
 <tr>
-<td>Grim Ghost</td>
-<td>1975</td>
-<td>Atlas Seaboard</td>
-<td><a href="GrimGhost/GrimGhost.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Grimm Tales Of Terror</td>
 <td>2014</td>
 <td>Zenescope</td>
@@ -42028,20 +42280,6 @@
 <td>2012</td>
 <td>Zenescope</td>
 <td><a href="Zenescope/Zenescope.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Grim Wit</td>
-<td>1972</td>
-<td>Rip Off</td>
-<td><a href="RipOffPress/RipOffPress.html">Details</a>
-</tr>
-
-<tr>
-<td>Grim Wit</td>
-<td>1973</td>
-<td>Last Gasp</td>
-<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -42073,31 +42311,66 @@
 </tr>
 
 <tr>
-<td>Grimjack</td>
-<td>1984</td>
-<td>First Comics</td>
-<td><a href="GrimJack/GrimJack.html">Details</a></td>
+<td>Grimmy: Bone In The U.S.A.</td>
+<td>1992</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
-<td>Grimjack Casefiles</td>
-<td>1990</td>
-<td>First Comics</td>
-<td><a href="FirstComics/FirstComics.html">Details</a></td>
+<td>Grimmy: Friends Don't Let Friends Own Cats!</td>
+<td>1996</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
-<td>Grimjack: Killer Instinct</td>
-<td>2005</td>
-<td>IDW</td>
-<td><a href="IDW/IDW.html">Details</a></td>
+<td>Grimmy: King Of The Heap!</td>
+<td>1997</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
-<td>Grimjack: The Manx Cat</td>
-<td>2009</td>
-<td>IDW</td>
-<td><a href="IDW/IDW.html">Details</a></td>
+<td>Grimmy: Mailmen Can't Jump</td>
+<td>1999</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Grimmy: My Dad Was A Boxer</td>
+<td>1999</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Grimmy: The Horrors Of Global Worming</td>
+<td>2000</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Grimmy: The Postman Always Screams Twice!</td>
+<td>1996</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Grimmy: The Revenge Of Grimmzilla</td>
+<td>2000</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Grimmy: Top Dog</td>
+<td>1991</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -42867,6 +43140,83 @@
 <td>1973</td>
 <td>King Features</td>
 <td><a href="HagarTheHorrible/HagarTheHorrible.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hagar The Horrible: All The World Loves A Lover</td>
+<td>1985</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hagar The Horrible: And The Golden Maiden</td>
+<td>1982</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hagar The Horrible: Fish Fly</td>
+<td>1991</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hagar The Horrible: Gangway!!</td>
+<td>1985</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hagar The Horrible: Hear No Evil (Do No Work)</td>
+<td>1983</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hagar The Horrible: I See London I See France...</td>
+<td>1991</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hagar The Horrible: Pillage Idiot</td>
+<td>1986</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hagar The Horrible: Room For One More</td>
+<td>1984</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hagar The Horrible: Sacking Paris On A Budget</td>
+<td>1982</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hagar The Horrible: Tall Tales</td>
+<td>1983</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hagar The Horrible: Things That Go Bump...</td>
+<td>1992</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -44137,6 +44487,62 @@
 </tr>
 
 <tr>
+<td>Heathcliff: And The Good Life</td>
+<td>1988</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Heathcliff: Around The World</td>
+<td>1989</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Heathcliff: At Home</td>
+<td>1985</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Heathcliff: Cat And Mouse Games</td>
+<td>1990</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Heathcliff: One, Two, Three, And You're Out</td>
+<td>1986</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Heathcliff: Specialties On The House</td>
+<td>1982</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Heathcliff: The Best Of Friends</td>
+<td>1986</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Heathcliff: The Big Sport</td>
+<td>1991</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Heathen</td>
 <td>2017</td>
 <td>Vault</td>
@@ -44981,6 +45387,41 @@
 <td>1969</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hi And Lois: House Calls</td>
+<td>1988</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hi And Lois: In Couch Potatoes!</td>
+<td>1990</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hi And Lois: In Happy Campers</td>
+<td>1990</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hi And Lois: In Modern Chaos!</td>
+<td>1989</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hi And Lois: Say Cheese</td>
+<td>1987</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -47203,6 +47644,13 @@
 </tr>
 
 <tr>
+<td>Incredible Hulk: A Man-Brute Berserk!</td>
+<td>1991</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Incredible Hunk</td>
 <td>1967</td>
 <td>Topps</td>
@@ -49303,6 +49751,27 @@
 </tr>
 
 <tr>
+<td>Jim Henson's Muppets Froggy Mountain Breakdown</td>
+<td>1985</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jim Henson's Muppets On The Town</td>
+<td>1986</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jim Henson's Muppets Short, Green and Handsome</td>
+<td>1984</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jim Henson's Tale Of Sand</td>
 <td>2011</td>
 <td>Archaia</td>
@@ -49923,6 +50392,13 @@
 <td>2007</td>
 <td>AdHouse</td>
 <td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Johnny Hiro: The Skills To Pay The Bills</td>
+<td>2013</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -53019,6 +53495,20 @@
 </tr>
 
 <tr>
+<td>Laddertop</td>
+<td>2011</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Laddertop Books 1-2</td>
+<td>2013</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Lady Action Special</td>
 <td>2009</td>
 <td>Moonstone</td>
@@ -55298,6 +55788,27 @@
 <td>1968</td>
 <td>King Features</td>
 <td><a href="KingFeatures/KingFeatures.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lockhorns</td>
+<td>1983</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lockhorns: I'm Sticking To My Story Whatever It Is</td>
+<td>1988</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lockhorns: It's A Letter Inviting Mother To Come Visit Us... I'll Mail It Myself</td>
+<td>1987</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -58136,6 +58647,20 @@
 </tr>
 
 <tr>
+<td>Marmaduke: I Am Loveable</td>
+<td>1986</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Marmaduke: It's A Dog's Life</td>
+<td>1989</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Marquis</td>
 <td>1997</td>
 <td>Caliber</td>
@@ -58406,6 +58931,13 @@
 <td>1977</td>
 <td>Marvel</td>
 <td><a href="MarvelCSS/MarvelCSS.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Marvel Comics X-Men 2: Enter The Phoenix</td>
+<td>1996</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -64188,6 +64720,13 @@
 </tr>
 
 <tr>
+<td>New Spring</td>
+<td>2010</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>New Statesmen</td>
 <td>1989</td>
 <td>Fleetway Quality</td>
@@ -64199,6 +64738,13 @@
 <td>1980</td>
 <td>DC</td>
 <td><a href="DCComics/DCComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>New Teen Titans</td>
+<td>1982</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -67642,6 +68188,20 @@
 <td>1953</td>
 <td>Creator</td>
 <td><a href="PaulSmith/PaulSmith.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pavlov</td>
+<td>1988</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pavlov's Pad</td>
+<td>1988</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -73604,6 +74164,13 @@
 </tr>
 
 <tr>
+<td>Ringworld: The Graphic Novel</td>
+<td>2014</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rinse</td>
 <td>2011</td>
 <td>Boom!</td>
@@ -73730,10 +74297,24 @@
 </tr>
 
 <tr>
+<td>Ripley's Believe It Or Not! Odd Places</td>
+<td>1991</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ripley's Believe It Or Not! Omnibus</td>
 <td>1934</td>
 <td>Simon And Schuster</td>
 <td><a href="SimonAndSchuster/SimonAndSchuster.html">Details</td>
+</tr>
+
+<tr>
+<td>Ripley's Believe It Or Not! Wild Animals</td>
+<td>1992</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -82503,6 +83084,13 @@
 </tr>
 
 <tr>
+<td>Still Weird</td>
+<td>1994</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Stingers</td>
 <td>2009</td>
 <td>Zenescope</td>
@@ -84092,6 +84680,13 @@
 </tr>
 
 <tr>
+<td>Superman Story</td>
+<td>1983</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Superman vs. Aliens</td>
 <td>1995</td>
 <td>Dark Horse</td>
@@ -84313,6 +84908,13 @@
 <td>1982</td>
 <td>DC</td>
 <td><a href="SwampThing/SwampThing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Swamp Thing</td>
+<td>1982</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -89114,6 +89716,13 @@
 </tr>
 
 <tr>
+<td>Uncanny X-Men</td>
+<td>1990</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Uncanny X-Men And The New Teen Titans</td>
 <td>1982</td>
 <td>Marvel</td>
@@ -89489,6 +90098,13 @@
 <td>2009</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Untold Legend Of The Batman</td>
+<td>1982</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -94173,6 +94789,13 @@
 <td>1993</td>
 <td>Caliber</td>
 <td><a href="CaliberComics/CaliberComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>World Of Krypton</td>
+<td>1982</td>
+<td>Tor</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
 </tr>
 
 <tr>
