--- a/IPC/IPC.html
+++ b/IPC/IPC.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<h1>International Publishing Corporation</h1>
+<img src="../2000AD/2000AD.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -18,13 +18,16 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="../2000AD/2000AD.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IPC1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IPC2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IPC3.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Comics published by the British company variously known as Amalgamated Press, Fleetway Publications, Odhams Press and IPC Media. The Amalgamated Press was a British newspaper and magazine publishing company founded by journalist and entrepreneur Alfred Harmsworth in 1901. In 1959 the company was bought by the Mirror Group and renamed Fleetway Publications. It acquired Longacre Press and George Newnes in 1961, and the group was renamed the International Publishing Corporation in 1963.
+IPC Comics published by the British company variously known as Amalgamated Press, Fleetway Publications, Odhams Press and IPC Media. The Amalgamated Press was a British newspaper and magazine publishing company founded by journalist and entrepreneur Alfred Harmsworth in 1901. In 1959 the company was bought by the Mirror Group and renamed Fleetway Publications. It acquired Longacre Press and George Newnes in 1961, and the group was renamed the International Publishing Corporation in 1963.
 </p><p>
 In 1998, IPC Magazines Ltd was subject to a management buyout financed by Cinven, a venture capital group, and the company was renamed IPC Media. Cinven then sold the company to Time Inc., then the magazine publishing subsidiary of Time Warner, in 2001. In January 2009, the company's chief executive became Evelyn Webster, replacing Sylvia Auton who had run it since 2001.
 </p><p>
@@ -36,8 +39,9 @@ TI Media (formerly International Publishing Corporation, IPC Magazines Ltd, IPC 
 Titles
 </p><p>
 <li><a href="../2000AD/2000AD.html">2000 AD</a> (1977)
-<li>Action (1976)
-<li>All-Action Monthly (1987)
+<li><a href="IPC1.jpg">A-Team Holiday Special</a> (1983)
+<li><a href="IPC2.jpg">Action</a> (1976)
+<li><a href="IPC3.jpg">Action Annual</a> (1977)
 <li>Battle Picture Library (1961)
 <li>Battle Picture Weekly (1975)
 <li>Bubbles &amp; The Children's Fairy (1921)
