--- a/index.html
+++ b/index.html
@@ -19503,6 +19503,13 @@
 </tr>
 
 <tr>
+<td>Cartoon Books</td>
+<td>1991</td>
+<td>Publisher</td>
+<td><a href="CartoonBooks/CartoonBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cartoons And Jokes</td>
 <td>1945</td>
 <td>Harvey</td>
@@ -48261,7 +48268,7 @@
 
 <tr>
 <td>IPC</td>
-<td>1963</td>
+<td>1959</td>
 <td>Publisher</td>
 <td><a href="IPC/IPC.html">Details</a></td>
 </tr>
